--- a/CedenoB_ZombieGame/CedenoB_ZombieGame/MainWindow.xaml
+++ b/CedenoB_ZombieGame/CedenoB_ZombieGame/MainWindow.xaml
@@ -1,13 +1,17 @@
 ﻿<Window x:Class="CedenoB_ZombieGame.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="1040" Width="1300" WindowStartupLocation="CenterScreen">
-	
-    <Grid x:Name="GameGrid" Background="Brown">
-       
-        <UniformGrid x:Name="GameUniformGrid" Grid.Column="1">
-
-        </UniformGrid>
-
-    </Grid>
+        Title="MainWindow" Height="1030" Width="1300" WindowStartupLocation="CenterScreen">
+    <DockPanel LastChildFill="True">
+        <Border Height="55" Background="SkyBlue" BorderBrush="Black" BorderThickness="1" DockPanel.Dock="Top">
+            <TextBlock Foreground="Black">Dock = "Top"</TextBlock>
+        </Border>
+        <Grid DockPanel.Dock="Left" Width="250"></Grid>
+        <Grid DockPanel.Dock="Right" Width="250"></Grid>
+        <Canvas x:Name="GameGrid" DockPanel.Dock="Bottom" Background="Brown">
+            <UniformGrid x:Name="GameUniformGrid" Grid.Column="1" Height="{Binding ElementName=GameGrid, Path=ActualHeight}" 
+                     Width="{Binding ElementName=GameGrid, Path=ActualWidth}">
+            </UniformGrid>
+        </Canvas>
+    </DockPanel>
 </Window>
