Player Trading Shop + Multiple Item Selection
Added the player trading shop, and made it where the GM can select
multiple items in the Shop to buy or sell, and players can trade
multiple items at the same time with other players. Still contains all
the checks, also optimized and organized some of the code in the player
trading shop and shop.

--- a/PlayerTrading/PlayerTrading/MainWindow.xaml
+++ b/PlayerTrading/PlayerTrading/MainWindow.xaml
@@ -1,9 +1,8 @@
-﻿<Window x:Class="Shop.MainWindow"
+﻿<Window x:Class="PlayerTrading.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Shop" Height="375" Width="600"
-        Background="Black"
-        >
+        Title="Trade!" Height="350" Width="525"
+        Background="Black">
     <Window.Resources>
         <Style  TargetType="{x:Type ListBoxItem}">
             <Style.Triggers>
@@ -19,24 +18,24 @@
     <Grid x:Name="mainPanel">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="40*">
-                
+
             </ColumnDefinition>
             <ColumnDefinition  Width="20*">
 
             </ColumnDefinition>
             <ColumnDefinition  Width="40*">
-                
+
             </ColumnDefinition>
         </Grid.ColumnDefinitions>
         <StackPanel x:Name="playerPanel" Grid.Column="0">
-            <Label Grid.Column="0" Foreground="LimeGreen" Content="{Binding name}" x:Name="playerName"></Label>
+            <Label Grid.Column="0" Foreground="LimeGreen" Content="{Binding name}" x:Name="playerNameLeft"></Label>
             <Grid>
-                <ListBox x:Name="playerItems" Height="300"
+                <ListBox x:Name="playerItemsLeft" Height="300"
+                         SelectionMode="Extended"
                      ScrollViewer.VerticalScrollBarVisibility="Visible"
                      AlternationCount="2"
                          Background="Black"
                          BorderBrush="Gray"
-                         SelectionMode="Extended"
                          MouseDoubleClick="playerItems_MouseDoubleClick">
                     <ListBox.ItemTemplate >
                         <DataTemplate>
@@ -57,33 +56,26 @@
             </Grid>
         </StackPanel>
         <StackPanel x:Name="actionPanel" Grid.Column="1">
-            <Label Grid.Column="1" Foreground="LimeGreen">Actions:</Label>
-            <Button Click="Button_Click" Foreground="LimeGreen" BorderBrush="Gray" Background="Black">Buy</Button>
-            <Button Click="Button_Click_1" Foreground="LimeGreen" BorderBrush="Gray" Background="Black">Sell</Button>
-            <UniformGrid Rows="4" Columns="2">
-                <Label Foreground="LimeGreen">Gold:</Label>
-                <Label x:Name="playerCurrency" Content="{Binding Path=Currency, Mode=OneWay}"
-                   HorizontalAlignment="Left"
-                   Foreground="LimeGreen"/>
-                <Label Background="Black" Foreground="LimeGreen">PB:</Label>
-                <Label  x:Name="playerPB"  Background="Black" Foreground="LimeGreen" Content="{Binding}"></Label>
-                <Label Foreground="LimeGreen" MouseLeftButtonUp="Label_MouseLeftButtonDown">Extra:</Label>
-                <Label x:Name="saleBonus" Foreground="LimeGreen" Content="{Binding}" HorizontalAlignment="Left" MouseLeftButtonUp="Label_MouseLeftButtonDown"></Label>
-            </UniformGrid>
+        </StackPanel>
+        <StackPanel Grid.Column="1">
+            <Label Height="25"></Label>
+            <Button x:Name="GiveToRightName"  Background="Black" Foreground="LimeGreen" Height="30" Click="GiveToRightName_Click"></Button>
+            <Button x:Name="GiveToLeftName"  Background="Black" Foreground="LimeGreen" Height="30" Click="GiveToLeftName_Click"></Button>
         </StackPanel>
         <StackPanel x:Name="shopPanel" Grid.Column="2">
-            <Label Grid.Column="2" Foreground="LimeGreen">Shop's Items:</Label>
+
+            <Label x:Name="playerNameRight" Grid.Column="2" Foreground="LimeGreen" Content="{Binding name}"></Label>
             <Grid>
-            <ListBox x:Name="shopItems" Height="300"
-                     SelectionMode="Extended"
+                <ListBox x:Name="playerItemsRight" Height="300"
+                         SelectionMode="Extended"
                      ScrollViewer.VerticalScrollBarVisibility="Visible"
                      AlternationCount="2"
                      Background="Black"
                      MouseDoubleClick="shopItems_MouseDoubleClick"
                      >
-                <ListBox.ItemTemplate>
-                    <DataTemplate >
-                        <UniformGrid Columns="2"
+                    <ListBox.ItemTemplate>
+                        <DataTemplate >
+                            <UniformGrid Columns="2"
                                      Rows="4">
                                 <Label Height="30" Width="100" Foreground="LimeGreen">Item:</Label>
                                 <Label Content="{Binding Weapon}" Height="30" Width="100" Foreground="LimeGreen"></Label>
@@ -93,13 +85,12 @@
                                 <Label Content="{Binding sellPrice}" Height="30" Width="100" Foreground="LimeGreen"></Label>
                                 <Label Height="30" Width="100" Foreground="LimeGreen">Description</Label>
                                 <Label Content="{Binding description}" Height="30" Width="100" Foreground="LimeGreen"></Label>
-                        </UniformGrid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+                            </UniformGrid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
             </Grid>
         </StackPanel>
     </Grid>
-    
+
 </Window>
- 
