Combat view mid update
Got the combat view to appear, as well as made changes so that combat
will be able to work

--- a/CedenoB_ZombieGame/CedenoB_ZombieGame/MainWindow.xaml
+++ b/CedenoB_ZombieGame/CedenoB_ZombieGame/MainWindow.xaml
@@ -6,9 +6,11 @@
         <Border Height="55" Background="SkyBlue" BorderBrush="Black" BorderThickness="1" DockPanel.Dock="Top">
             <TextBlock Foreground="Black">Dock = "Top"</TextBlock>
         </Border>
-        <Grid DockPanel.Dock="Left" Width="250"></Grid>
+        <Grid DockPanel.Dock="Left" Width="250">
+            <Button x:Name="testButton" VerticalAlignment="Top" Click="testButton_Click_1">Show combat</Button>
+        </Grid>
         <Grid DockPanel.Dock="Right" Width="250"></Grid>
-        <Canvas x:Name="GameGrid" DockPanel.Dock="Bottom" Background="Brown">
+        <Canvas x:Name="GameGrid" DockPanel.Dock="Bottom" Background="Brown" MouseLeftButtonDown="GameGrid_MouseLeftButtonDown_1">
             <UniformGrid x:Name="GameUniformGrid" Grid.Column="1" Height="{Binding ElementName=GameGrid, Path=ActualHeight}" 
                      Width="{Binding ElementName=GameGrid, Path=ActualWidth}">
             </UniformGrid>
